2002-12-27  Jens Finke  <jens@triq.net>

     	* configure.in: Removed GNOME_COMPILE_WARNINGS.

	* src/Makefile.am: Fixed handling of server.in.in file.

2002-11-28  Jens Finke  <jens@triq.net>

	* src/apotheke-directory.c: Added new mtime column, which is used
	to sort the view by date.
	(apply_cvs_status): Obtain the date string with ctime (shouldn't
	this return the date in the current locale format?), set to Dummy
	Timestamp for added files.

	* src/apotheke-view.c (set_up_tree_view): Use a separate sort id
	to define which model column is used for sorting. 

2002-11-26  Jens Finke  <jens@triq.net>

	* src/apotheke-directory.c (apotheke_directory_construct): Setup
	sort function.
	(apotheke_sort_func): Reworked.

	* src/apotheke-view.c (setup_tree_view): Fixed column sorting ids.

2002-11-26  Jens Finke  <jens@triq.net>

	* src/apotheke-file.h: Removed.
	
	* src/Makefile.am (SOURCES): Removed apotheke-file.h

	* src/apotheke-cvs-entries.[ch] (apotheke_cvs_entries_get_entries):
	Return list of all CVS entries.

	* src/apotheke-directory.[ch]: Use the tree model directly to
	store all file information. Don't use ApothekeFile anymore.

	* src/apotheke-view.c: View columns are independent of model
	columns now. Obtain a filename of an entry through the tree model,
	don't use ApothekeFile.

2002-11-14  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am: Install the binary in ${libexecdir}, instead of
	${bindir}; and replace the path in the .server file. Also add some
	more clean rules.

	* configure.in: Fix the typo with GNOME_COMPILE_WARNINGS, so that
	it actually works. Use the GConf macros instead of doing it all by
	hand. Also turn on AM_MAINTAINER_MODE.

2002-11-07  Jens Finke <jens@triq.net>

	* apotheke.spec.in: Added spec file, created by Christian Schaller
	<Christian@linuxpower.org>.

	* configure.in: Added apotheke.spec to output files.

	* Makefile.am: Added spec file to EXTRA_DIST.

2002-11-01  Jens Finke <jens@triq.net>
